--- a/package.json
+++ b/package.json
@@ -4,18 +4,16 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "npm run build && npm run server",
+    "start": "npm run build",
     "prebuild": "npm run clean",
     "build": "NODE_ENV=production webpack --config webpack.config",
-    "clean": "rimraf www",
-    "server": "http-server www"
+    "clean": "rimraf dist"
   },
   "author": "CJies Tan <cijies@gmail.com> (https://github.com/cjies)",
   "license": "MIT",
   "devDependencies": {
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.2.2",
-    "http-server": "^0.9.0",
     "rimraf": "^2.6.1",
     "webpack": "^2.3.2"
   },
