--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.2.2",
+    "babel-preset-stage-2": "^6.22.0",
+    "html-webpack-plugin": "^2.28.0",
     "rimraf": "^2.6.1",
     "webpack": "^2.3.2"
   },
   "dependencies": {
-    "lodash-es": "^4.17.4"
+    "lodash-es": "^4.17.4",
+    "moment": "^2.18.1"
   }
 }
