--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "webpack": "^2.3.2"
   },
   "dependencies": {
-    "lodash-es": "^4.17.4",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "lodash-es": "^4.17.4"
   }
 }
